# FaceReconstruction

./: .gitignore  .gitmodules  README.md  install_dependencies.sh  install_dependencies_linux.sh  install_dependencies_win.sh
data/samples/landmark/: 00100.txt  r11.txt  sample1.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sampleHighRes.txt  sampleHighRes2.txt
dependencies/: install_dependencies.sh
libs/: .gitignore
scripts/: extractBFM.py  extractLandmarks.py  predictDepth.py  preprocessSequence.py  requirements.txt
src/: 2DImage.h  CMakeLists.txt  DataHandler.h  Eigen.h  Face.h  FaceModel.h  Image.h  Optimizer.h  PoseIncrement.h  Projection.h  Render.h  Renderer.cu  Renderer.h  Utils.h  landmark.h  main.cpp
src/data_loader/: bfm_loader.cpp
